SERVER-55120 Fix docs link in invalid config fatal error message